--- a/src/components/stylesheets/form.css
+++ b/src/components/stylesheets/form.css
@@ -25,7 +25,7 @@
 
 .contact-form label {
   font-size: 1.2rem;
-  color: #000;
+  color: #363636;;
   width: max-content;
 }
 
@@ -51,7 +51,7 @@ textarea {
  .form-button .button {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1rem;
-    color: #000;
+    color: #363636;;
     height: 40px;
     width: 155%;
     margin-top: 40%;
