--- a/src/components/stylesheets/portfolio.css
+++ b/src/components/stylesheets/portfolio.css
@@ -27,8 +27,18 @@
 }
 
 .card {
-  width:18rem !important;
+  width:30% ;
   height: 25rem;
+  margin-right: 20px;
+}
+
+.card3 {
+  width:30%;
+  margin-right: 20px;
+}
+
+.card2 {
+  width:30% ;
 }
 
 .card-title {
@@ -191,7 +201,7 @@ li {
     margin-top: 20px;
   }
 
-  .card2 {
+  /* .card2 {
     width: 28%;
     margin: 0 20px;
   }
@@ -199,7 +209,7 @@ li {
   .card3 {
     width: 28%;
     margin-right: 5px;
-  }
+  } */
 
   .projects p {
     display: flex;
@@ -224,6 +234,12 @@ li {
   .portfolio-section img {
     width: 100%;
     height:50%;
+  }
+
+  .card {
+    width: 44%;
+    margin: 0 10px;
+    height: 28rem !important;
   }
 
   .card2 {
@@ -271,6 +287,12 @@ li {
     flex-direction: column;
   }
 
+  .card {
+    width: 44%;
+    margin-left: 10px;
+    height: 25rem !important;
+  }
+
   .card2 {
     width: 44%;
     margin-left: 10px;
@@ -278,8 +300,8 @@ li {
   }
   .card3 {
     width: 44%;
-    margin-right: 5px;
-    margin-left: 5px;
+    margin-right: 20px;
+    margin-left: 10px;
     height: 25rem !important;
   }
 
@@ -296,15 +318,15 @@ li {
   .row1 {
     display: flex;
     flex-direction: row;
-    justify-content: left;
-    margin-left: 38px;
+    justify-content: center;
+    align-items: center;
   }
   .row2 {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
-    margin-left: 38px;
   }
 }
 
@@ -312,12 +334,12 @@ li {
   .row1 {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
   }
   .row2 {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     margin-top: 20px;
   }
 
@@ -327,12 +349,10 @@ li {
   }
 
   .card2 {
-    width: 53%;
     margin-top: 10px;
   }
 
   .card3 {
-    width: 53%;
     margin-top: 10px;
     margin-right: 20px;
   }
@@ -357,6 +377,10 @@ li {
     height: 50%;
   }
 
+  .card {
+    width: 61%;
+  }
+
   .card2 {
     width: 61%;
     margin-top: 10px;
@@ -379,11 +403,13 @@ li {
   .row1{
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
 
   .row2{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin-top: 20px;
   }
 
@@ -394,6 +420,10 @@ li {
 
 .cardSofa{
   margin-right: 20px;
+}
+
+.card {
+  width: 61%;
 }
 
   .card2 {
@@ -414,17 +444,23 @@ li {
   .row1{
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
 
   .row2{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin-top: 20px;
   }
 
   .portfolio-section img {
     width: 100%;
     height: 50%;
+    }
+
+    .card {
+      width: 75%;
     }
 
   .card2 {
@@ -443,7 +479,52 @@ li {
   }
 }
 
-@media screen and (min-width: 415px) and (max-width: 648px) {
+@media screen and (min-width: 542px) and (max-width: 648px) {
+  .portfolio-section img {
+    width: 100vh;
+    margin-left: 2px;
+    margin-top: 3px;
+  }
+
+  .card2 {
+    border-color: #2c5606;
+    border-radius: 20%;
+    border-style: solid;
+    margin-top: 2px;
+    margin-bottom: 2px;
+  }
+
+  .card3 {
+    border-color: #2c5606;
+    border-radius: 20%;
+    border-style: solid;
+    width: 65%;
+  }
+}
+
+@media screen and (min-width: 540px) and (max-width: 541px) {
+  .portfolio-section img {
+      }
+
+      .row1	{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      .row2	{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+  .card {
+     margin-bottom: 10px;
+     width: 100%;
+    }
+}
+
+@media screen and (min-width: 415px) and (max-width: 539px) {
   .portfolio-section img {
     width: 100vh;
     margin-left: 2px;
@@ -474,6 +555,7 @@ li {
 
   .card {
     margin-top: 10px;
+    width: 100%;
   }
 
   .card2 {
@@ -485,14 +567,16 @@ li {
   }
 
   .row1{
-    margin-left:18px;
+    display: flex;
+    flex-direction: column;
   }
 
   .row2{
-    margin-left:18px;
+    display: flex;
+    flex-direction: column;
   }
   .about-hi-contact{
-margin-top: 60px;
+    margin-top: 60px;
   }
 }
 @media screen and (min-width: 412px) and (max-width:413px) {
@@ -508,6 +592,7 @@ margin-top: 60px;
 
   .card {
     margin-top: 10px;
+    width: 100%;
   }
 
   .cardSofa{
@@ -521,15 +606,6 @@ margin-top: 60px;
   .about-hi-contact {
     margin-top: 40px;
     margin-bottom: 20px;
-  }
-
- 
-  .row1{
-    margin-left:18px;
-  }
-
-  .row2{
-    margin-left:18px;
   }
 
   .card2 .cardWP{
@@ -555,6 +631,7 @@ margin-top: 60px;
 
   .card {
     margin-top: 10px;
+    width: 100%;
   }
 
   .cardSofa{
@@ -584,15 +661,34 @@ margin-top: 60px;
   }
 }
 
-@media screen and (min-width: 200px) and (max-width: 374px) {
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .about-hi-portfolio h1 {
+    font-size: 2.4rem;
+  
+  }
+  .list-coded li {
+    font-size: 1.2rem;
+}
+.card {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+}
+
+@media screen and (min-width: 200px) and (max-width: 319px) {
   .portfolio-section h1 {
     font-size: 1.6rem;
   }
 
   .portfolio-section img {
-    width: 28vh;
   }
 
+  .card{
+    width: 100%;
+    height: 28rem;
+    margin-bottom: 10px;
+  }
 
   .card2 {
     margin-top: 10px;
@@ -600,6 +696,8 @@ margin-top: 60px;
 
   .card3 {
     margin-top: 10px;
+    height: 32rem !important;
   }
 
 }
+
